--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,15 @@
-@media screen and (max-width: 400px) {
-
+@media (max-width: 600px) {
+    body {
+        background-color: lightblue;
+    }
 }
+
 #welcome-section {
   height: 100vh;
+}
+
+
+#navbar{
+	position: fixed;
+	top:0;
 }
