fixed nav bar link

--- a/css/style.css
+++ b/css/style.css
@@ -19,17 +19,20 @@ body {
 
 
 #navbar{
-	position: fixed;
-	top:0;
+  position: flex;
+  position: fixed;
+  top:0;
   background-color: #f44336;
   height: 5vh;
   width: 100vw;
+  
 }
 
 #navbar a{
-  padding-left: 0.2em;
-  padding-right: : 0.2em;
-  padding-top: 10px;
+
+  padding-left: 0.5em;
+  padding-right: 0.3em;
+  padding-top: 0.5em;
   text-decoration: none;
   color: white;
 }
