--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 * {
   margin: 0;
   padding: 0;
+overflow-x: 
 
 }
 
@@ -10,13 +11,38 @@
         background-color: lightblue;
     }
 }
-body {
-  display: flex;
+html{
+	margin: 0px;
+    padding: 0px;
+	overflow-x:hidden;
 }
-#welcome-section {
-  height: 100vh;
+body{
+	display: 
+	overflow-x: hidden;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	
 }
 
+#welcome-section {
+    height: 100vh;
+	width: 100vw;
+	display: flex;
+	background-color: #424242;
+	align-items: center;
+	text-align: center;
+	justify-content: center;
+	font-family: sans-serif;
+}
+h1{
+	color:white;
+	font-size:3em;
+}
+h3{
+	color:#cfcfcf;
+	font-size:2em;
+}
 
 #navbar{
   position: flex;
@@ -30,10 +56,16 @@ body {
 
 #navbar a{
   float: right;
+	margin-right: 0.6em;
   padding-left: 0.3em;
   padding-right: 0.5em;
-  padding-top: 0.5em;
+  padding-top: 0.3em;
   text-decoration: none;
   color: white;
   font-size: 1.3em;
+}
+
+#contact{
+	display: block;
+	
 }
